--- a/src/styles/Newsletter.css
+++ b/src/styles/Newsletter.css
@@ -1,3 +1,51 @@
+/* Add these styles at the beginning of the file */
+.newsletter-wrap {
+  background-color: red;
+  padding: 30px 0;
+}
+
+.form-row {
+  display: flex;
+  align-items: center;
+  gap: 0px;
+}
+
+.input-with-icon {
+  position: relative;
+  flex: 1;
+}
+
+.input-with-icon i {
+  position: absolute;
+  left: 15px;
+  top: 50%;
+  transform: translateY(-50%);
+  color: #666;
+}
+
+.input-with-icon input {
+  padding-left: 45px;
+  height: 50px;
+  border-radius: 0px;
+  border: 1px solid #ddd;
+  width: 100%;
+}
+
+.signup {
+  background: #000000;
+  color: white;
+  border: none;
+  padding: 12px 30px;
+  border-radius: 0px;
+  cursor: pointer;
+  font-weight: bold;
+  transition: background-color 0.3s;
+}
+
+.signup:hover {
+  background: #d89900;
+}
+
 /* Styles for the slider */
 .slider-container {
   position: relative;
@@ -184,4 +232,40 @@
 
 .slider-button i {
     margin-right: 10px;
+}
+
+.newsletter-content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+.newsletter-content .title {
+  margin: 0;
+}
+
+.newsletter-content .title h1 {
+  color: white;
+  margin: 0;
+}
+
+.newsletter-row {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+  padding: 20px 0;
+}
+
+.newsletter-row h1 {
+  font-size: 48px;
+  color: #fff;
+  margin-bottom: 0;
+  white-space: nowrap;
+  font-weight: bold;
+  padding-right: 250px;
+}
+
+.newsletter-row form {
+  flex: 1;
 }
