--- a/src/styles/Teachers.css
+++ b/src/styles/Teachers.css
@@ -1,7 +1,7 @@
 .teacher-wrap {
   padding: 60px 0;
   text-align: center;
-  background: url(../src/assets/images/class-bg.jpg) no-repeat top;
+  background: url('/assets/images/class-bg.jpg') no-repeat top;
   background-size: cover;
 }
 
