--- a/src/components/pages/contact.css
+++ b/src/components/pages/contact.css
@@ -198,3 +198,270 @@ body {
 .tags-widget ul li a:hover {
     background-color: #e5e8f3;
 }
+
+.contact-wrap {
+  position: relative;
+  overflow: hidden;
+  padding: 60px 0;
+}
+
+.contact-wrap p {
+  font-size: 14px;
+  line-height: 24px;
+  color: #000;
+  margin-bottom: 20px;
+}
+
+.address-item {
+  padding: 40px;
+  background-color: #fafafa;
+  border-radius: 10px;
+  text-align: center;
+}
+
+.address-item .address-icon {
+  background: #ff002a;
+  height: 70px;
+  width: 70px;
+  color: #fff;
+  line-height: 70px;
+  border-radius: 100%;
+  position: relative;
+  margin: 0 auto 15px;
+  font-size: 32px;
+}
+
+.address-item .address-icon:before {
+  content: "";
+  position: absolute;
+  z-index: 0;
+  left: 50%;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  display: block;
+  width: 70px;
+  height: 70px;
+  background: #ff002a;
+  border-radius: 50%;
+  animation: pulse-border 1.5s ease-out infinite;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.address-item .address-text .contact-title {
+  font-size: 22px;
+  margin: 0 0 10px;
+  font-weight: 700;
+  color: #000;
+}
+
+.cont_info {
+  margin-bottom: 60px;
+}
+
+.address-item .address-text ul li {
+  font-size: 14px;
+  line-height: 26px;
+  font-weight: 400;
+  color: #505050;
+}
+
+.address-item .address-text ul li a {
+  color: #505050;
+}
+
+.form-group .btn {
+  background: #ffb607;
+  display: inline-block;
+  border-radius: 30px;
+  font-weight: 600;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 16px;
+  color: #fff;
+  text-transform: uppercase;
+  padding: 16px 40px;
+}
+
+.form-group .btn:hover {
+  background: #e20c0c;
+  color: #fff;
+}
+
+.contact-wrap .form-control {
+  height: 50px;
+  width: 100%;
+  padding-left: 15px;
+  border-radius: 0;
+  box-shadow: none;
+  text-shadow: none;
+  border: none;
+  border: 1px solid #f2f0fa;
+  background: none;
+  color: #000;
+  font-size: 14px;
+}
+
+.contact-wrap textarea.form-control {
+  height: 160px;
+}
+
+.contact_form {
+  padding: 0px 50px 30px 0px;
+}
+
+.contact_info {
+  padding: 55px 0px 30px 50px;
+  background: url(../images/contact-bg.jpg) no-repeat top;
+  background-size: cover;
+}
+
+.contact-wrap ::placeholder {
+  color: #71567e;
+  opacity: 1;
+}
+
+.contact-wrap :-ms-input-placeholder {
+  color: #71567e;
+}
+
+.contact-wrap ::-ms-input-placeholder {
+  color: #71567e;
+}
+
+.contact_info {
+  position: relative;
+}
+
+.contact_info .title:after {
+  background: #fff;
+}
+
+.contact_box {
+  display: flex;
+  margin-bottom: 25px;
+}
+
+.contact_box p {
+  font-size: 16px;
+  color: #fff;
+  font-weight: bold;
+  margin-left: 20px;
+  text-transform: uppercase;
+}
+
+.contact_box p span {
+  display: block;
+  font-weight: normal;
+  font-size: 14px;
+  text-transform: none;
+}
+
+.contact_box p span a {
+  text-decoration: none;
+  color: #fff;
+}
+
+.contact_info .title {
+  margin-bottom: 60px;
+}
+
+.contact_form {
+  background: #ffb607;
+  padding: 40px;
+}
+
+.contact-wrap .input-group {
+  margin-top: 12px;
+}
+
+.contact-wrap .input-group .form-control {
+  border-radius: 0;
+  background: #fff;
+  height: 46px;
+  border: none;
+  font-size: 14px;
+}
+
+contact-wrap textarea.form-control {
+  height: 124px !important;
+}
+
+.contact-wrap .sub {
+  box-shadow: 0 4px 5px rgba(0, 0, 0, 0.15);
+  color: #000;
+  font-size: 16px;
+  text-transform: uppercase;
+  background: #fff;
+  font-weight: bold;
+  padding: 16px 38px;
+  border-radius: 30px;
+  border: none;
+  display: inline-block;
+}
+
+.contact-wrap .sub:hover {
+  background: #000;
+  color: #fff;
+}
+
+.contact_form .title h1 {
+  font-size: 32px;
+  font-weight: 600;
+  color: #fff;
+}
+
+.contact_form .title:after {
+  background: #fff;
+}
+
+.conInfo {
+  padding-left: 66px;
+  position: relative;
+  font-size: 16px;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.conInfo span {
+  font-size: 12px;
+  text-transform: uppercase;
+  color: #a3a3a3;
+  letter-spacing: 2px;
+  display: block;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
+}
+
+.phonewrp a {
+  font-size: 24px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
+  color: #000;
+  text-decoration: none;
+}
+
+.emailWrp a {
+  font-size: 18px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
+  color: #000;
+  text-decoration: none;
+}
+
+.emailWrp:before {
+  background: url(../images/email_icon.png) no-repeat;
+  width: 49px;
+  height: 37px;
+}
+
+.phonewrp a:hover {
+  color: #ffb607;
+}
+
+.mapwrp {
+  margin-top: 20px;
+}
+
+.mapwrp iframe {
+  width: 100%;
+  height: 300px;
+}
