--- a/src/components/pages/contact.css
+++ b/src/components/pages/contact.css
@@ -465,3 +465,16 @@ contact-wrap textarea.form-control {
   width: 100%;
   height: 300px;
 }
+
+.login-wrap {
+    background-color: #f5f5f5;
+    padding: 30px;
+    border-radius: 8px;
+}
+
+.form-group {
+    background-color: #fefdfd;
+    margin-bottom: 15px;
+    padding: 10px;
+    border-radius: 4px;
+}
